--- a/cv.html
+++ b/cv.html
@@ -18,9 +18,9 @@ title: CV
   </div>
   <div>
     <p class="right-align">
-      <a href="{{ absolute_url }}/">https://www.aakash-saboo.github.io</a><br/>
-      <a href="mailto:domoritz@cmu.edu">aakashsaboo2@gmail.com</a><br/>
-      <a href="https://twitter.com/domoritz">@domoritz</a>
+      
+      <a href="mailto:aakashsaboo2@gmail.com">aakashsaboo2@gmail.com</a><br/>
+      <a href="https://twitter.com/AakashSaboo">@AakashSaboo</a>
     </p>
   </div>
 </div>
@@ -29,7 +29,7 @@ title: CV
 <h2>Research Area</h2>
 
 <p>
-To enhance people's ability to understand and communicate large and complex data, I develop methods that richly integrate the capabilities of both people and machines. I combine methods from <strong>visualization</strong>, <strong>data management</strong>, <strong>programming languages</strong>, and <strong>human-computer interaction</strong> to enable effective methods for data analysis and communication. My systems have won awards at premier academic venues, and are used by journalists, data enthusiasts, developers, educators, and the data science community.
+  I am particularly interested in Computer-aided-diagnosis through the lens of Self-Supervised Learning, Semantic Image editing and Image-to-Image translation frameworks. I am also interested in unsupervised image clustering and segmentation.
 </p>
 
 
