--- a/cv.html
+++ b/cv.html
@@ -290,7 +290,7 @@ title: CV
   
   <p>
     <strong>Prof. Hacer Yalim Keles</strong><br/>
-    Assoc. Prof. Dr. at Hacettepe University<br/>
+    Assoc. Prof. at Hacettepe University<br/>
     <i>Hacettepe University</i><br/>
     <a href="https://scholar.google.com/citations?user=noo7zCUAAAAJ&hl=en">https://scholar.google.com/citations?user=noo7zCUAAAAJ&hl=en</a>
   </p>
