--- a/cv.html
+++ b/cv.html
@@ -21,6 +21,7 @@ title: CV
       
       <a href="mailto:aakashsaboo2@gmail.com">aakashsaboo2@gmail.com</a><br/>
       <a href="https://twitter.com/AakashSaboo">@AakashSaboo</a>
+      <a href="https://drive.google.com/file/d/1UQTWZIGVZqXcysN8eMiAiy4y7r1ikbeu/view?usp=sharing">View full CV</a>
     </p>
   </div>
 </div>
